--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "handlebars": "^4.0.11",
+    "mysql2": "^1.5.1",
     "socket.io": "^2.0.4",
     "vue": "^2.4.4",
     "vue-router": "^3.0.1",
